--- a/match.ipynb
+++ b/match.ipynb
@@ -28,7 +28,6 @@
    "cell_type": "markdown",
    "id": "f77a597f-1ae1-44bd-b007-8c902798cf0c",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": [],
     "toc-hr-collapsed": true
    },
@@ -1286,7 +1285,6 @@
    "cell_type": "markdown",
    "id": "583c7991-cba1-4574-9e48-b3fd92287aa9",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": [],
     "toc-hr-collapsed": true
    },
@@ -1677,7 +1675,6 @@
    "cell_type": "markdown",
    "id": "aa14c165-ca74-432a-b6ec-b7cf10a3239e",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -3582,6 +3579,269 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4d85cd81-28af-4bc6-80f7-bc9b86871aef",
+   "metadata": {},
+   "source": [
+    "## 3-3. Append field of study information"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "5607b5dc-bc74-4aa8-83e3-622c4f6db074",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sqlite3\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Load the datasets\n",
+    "df_fields = pd.read_csv('SciSciNet_2023/SciSciNet_Fields.tsv', delimiter='\\t')\n",
+    "df_paper_fields = pd.read_csv('SciSciNet_2023/SciSciNet_PaperFields.tsv', delimiter='\\t')\n",
+    "\n",
+    "# Filter the fields dataset by FieldType == 'Top'\n",
+    "df_top_fields = df_fields[df_fields['Field_Type'] == 'Top']\n",
+    "\n",
+    "# Create a connxection to the database\n",
+    "conn = sqlite3.connect('final_result.sqlite')\n",
+    "\n",
+    "df_paper_fields.to_sql('paper_fields', conn, if_exists='replace', index=False)\n",
+    "df_top_fields.to_sql('top_fields', conn, if_exists='replace', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c04f125f-68ae-4d40-9f6b-cc198f28abeb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cur = conn.cursor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "8d8b0ec7-6a93-46c0-9723-de02d21f2bc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('final_matched',), ('paper_fields',), ('top_fields',), ('paper_fields_with_names',), ('final_matched_with_fields',)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "cur.execute(\"SELECT name FROM sqlite_master WHERE type='table'\")\n",
+    "print(cur.fetchall())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c9bed3f9-737b-43db-bd0d-a1481662ef36",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 'index', 'INTEGER', 0, None, 0),\n",
+       " (1, 'PaperID', 'INTEGER', 0, None, 0),\n",
+       " (2, 'DOI', 'TEXT', 0, None, 0),\n",
+       " (3, 'DocType', 'TEXT', 0, None, 0),\n",
+       " (4, 'Year', 'REAL', 0, None, 0),\n",
+       " (5, 'Date', 'TEXT', 0, None, 0),\n",
+       " (6, 'JournalID', 'REAL', 0, None, 0),\n",
+       " (7, 'ConferenceSeriesID', 'REAL', 0, None, 0),\n",
+       " (8, 'Citation_Count', 'REAL', 0, None, 0),\n",
+       " (9, 'C10', 'REAL', 0, None, 0),\n",
+       " (10, 'Reference_Count', 'REAL', 0, None, 0),\n",
+       " (11, 'C5', 'REAL', 0, None, 0),\n",
+       " (12, 'Team_Size', 'REAL', 0, None, 0),\n",
+       " (13, 'Institution_Count', 'REAL', 0, None, 0),\n",
+       " (14, 'Disruption', 'REAL', 0, None, 0),\n",
+       " (15, 'Atyp_10pct_Z', 'REAL', 0, None, 0),\n",
+       " (16, 'Atyp_Pairs', 'REAL', 0, None, 0),\n",
+       " (17, 'Atyp_Median_Z', 'REAL', 0, None, 0),\n",
+       " (18, 'SB_B', 'REAL', 0, None, 0),\n",
+       " (19, 'SB_T', 'REAL', 0, None, 0),\n",
+       " (20, 'Patent_Count', 'INTEGER', 0, None, 0),\n",
+       " (21, 'Newsfeed_Count', 'INTEGER', 0, None, 0),\n",
+       " (22, 'Tweet_Count', 'INTEGER', 0, None, 0),\n",
+       " (23, 'NCT_Count', 'INTEGER', 0, None, 0),\n",
+       " (24, 'NIH_Count', 'INTEGER', 0, None, 0),\n",
+       " (25, 'NSF_Count', 'INTEGER', 0, None, 0),\n",
+       " (26, 'WSB_mu', 'REAL', 0, None, 0),\n",
+       " (27, 'WSB_sigma', 'REAL', 0, None, 0),\n",
+       " (28, 'WSB_Cinf', 'REAL', 0, None, 0),\n",
+       " (29, 'fem', 'INTEGER', 0, None, 0),\n",
+       " (30, 'country', 'TEXT', 0, None, 0),\n",
+       " (31, 'sdg_codes', 'TEXT', 0, None, 0),\n",
+       " (32, 'fem_ratio', 'REAL', 0, None, 0),\n",
+       " (33, 'sdg_1', 'REAL', 0, None, 0),\n",
+       " (34, 'sdg_2', 'REAL', 0, None, 0),\n",
+       " (35, 'sdg_3', 'REAL', 0, None, 0),\n",
+       " (36, 'sdg_4', 'REAL', 0, None, 0),\n",
+       " (37, 'sdg_5', 'REAL', 0, None, 0),\n",
+       " (38, 'sdg_6', 'REAL', 0, None, 0),\n",
+       " (39, 'sdg_7', 'REAL', 0, None, 0),\n",
+       " (40, 'sdg_8', 'REAL', 0, None, 0),\n",
+       " (41, 'sdg_9', 'REAL', 0, None, 0),\n",
+       " (42, 'sdg_10', 'REAL', 0, None, 0),\n",
+       " (43, 'sdg_11', 'REAL', 0, None, 0),\n",
+       " (44, 'sdg_12', 'REAL', 0, None, 0),\n",
+       " (45, 'sdg_13', 'REAL', 0, None, 0),\n",
+       " (46, 'sdg_14', 'REAL', 0, None, 0),\n",
+       " (47, 'sdg_15', 'REAL', 0, None, 0),\n",
+       " (48, 'sdg_16', 'REAL', 0, None, 0),\n",
+       " (49, 'sdg_17', 'REAL', 0, None, 0)]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cur.execute(\"PRAGMA table_info('final_matched')\").fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "2df5e96f-f82b-4771-b878-03d73a834e1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x2b630b394a40>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Add an extra column 'Field_Name' to the paper-fields dataset by matching with 'top_fields'\n",
+    "query = \"\"\"\n",
+    "    CREATE TABLE paper_fields_with_names AS\n",
+    "    SELECT paper_fields.*, top_fields.Field_Name\n",
+    "    FROM paper_fields\n",
+    "    INNER JOIN top_fields ON paper_fields.FieldID = top_fields.FieldID;\n",
+    "\"\"\"\n",
+    "conn.execute(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "671c484d-e0bd-45f7-b31f-0dbd714bbede",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 8min 7s, sys: 5min 16s, total: 13min 23s\n",
+      "Wall time: 15min 11s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x2b630b3949d0>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# Match the paper-fields dataset with the 'final_matched' table by PaperID\n",
+    "query = \"\"\"\n",
+    "    CREATE TABLE final_matched_with_fields AS\n",
+    "    SELECT final_matched.*, paper_fields_with_names.FieldID, paper_fields_with_names.Field_Name\n",
+    "    FROM final_matched\n",
+    "    LEFT JOIN paper_fields_with_names ON final_matched.PaperID = paper_fields_with_names.PaperID;\n",
+    "\"\"\"\n",
+    "conn.execute(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "87b37937-8144-452d-8839-f211a2d813ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "5b80abfe-752c-4376-a7bc-ec6ffc3660ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pragma_query = 'PRAGMA table_info(\"final_matched_with_fields\");'\n",
+    "cur.execute(pragma_query)\n",
+    "table_info = cur.fetchall()\n",
+    "\n",
+    "# Extract column names and types\n",
+    "column_names = [col[1] for col in table_info]\n",
+    "column_types = [col[2] for col in table_info]\n",
+    "# Connect to the new database file\n",
+    "conn_result = sqlite3.connect('final.sqlite')\n",
+    "cur_result = conn_result.cursor()\n",
+    "create_table_query = 'CREATE TABLE \"final_matched_with_fields\" (' + ', '.join(['\"' + name + '\" ' + typ for name, typ in zip(column_names, column_types)]) + ');'\n",
+    "\n",
+    "# Create the 'scinet_papers_matched' table in the new database\n",
+    "cur_result.execute(create_table_query)\n",
+    "\n",
+    "# Execute a SELECT statement to fetch the data from the 'scinet_papers_matched' table\n",
+    "select_query = 'SELECT * FROM \"final_matched_with_fields\";'\n",
+    "cur.execute(select_query)\n",
+    "result_data = cur.fetchall()\n",
+    "\n",
+    "# Insert the data into the 'scinet_papers_matched' table in the new database\n",
+    "insert_query = f'INSERT INTO \"final_matched_with_fields\" VALUES ({\",\".join([\"?\"] * len(column_names))});'\n",
+    "cur_result.executemany(insert_query, result_data)\n",
+    "\n",
+    "# Commit the changes and close the connections\n",
+    "conn_result.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "18a97a07-b5b4-43d0-8a8c-514fdbf627fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn_result.close()\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3bef8a0f-fd5e-4cea-b7c5-ce335ff6eb0c",
    "metadata": {},
    "source": [
@@ -3613,7 +3873,7 @@
    "source": [
     "import sqlite3\n",
     "import pandas as pd\n",
-    "con = sqlite3.connect(\"result.sqlite\")\n",
+    "con = sqlite3.connect(\"final.sqlite\")\n",
     "cur = con.cursor()\n",
     "cur.execute(\"SELECT name FROM sqlite_master WHERE type='table';\")\n",
     "print(cur.fetchall())"
