--- a/match.ipynb
+++ b/match.ipynb
@@ -17,7 +17,12 @@
    "cell_type": "code",
    "execution_count": 49,
    "id": "732dec10-fbe8-49db-916b-a75609705d48",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "pd.set_option(\"display.max_columns\", 100)\n",
@@ -28,6 +33,9 @@
    "cell_type": "markdown",
    "id": "f77a597f-1ae1-44bd-b007-8c902798cf0c",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": [],
     "toc-hr-collapsed": true
    },
@@ -1923,14 +1931,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4387db2a-b883-43e9-9f07-79e49c1222a6",
+   "id": "bb7c2739-83fd-4efc-9fa9-2cb02869aeda",
    "metadata": {
     "tags": [],
     "toc-hr-collapsed": true
    },
    "source": [
-    "# 3. Append affiliation, author demographic information\n",
-    "\n",
+    "# 3. Append affiliation, author demographic information"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b8d5ec2-27e0-45c9-b346-0ff9de65bcfb",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": [],
+    "toc-hr-collapsed": true
+   },
+   "source": [
     "## 3-1. Load data into SQL database"
    ]
   },
@@ -2821,7 +2839,10 @@
   {
    "cell_type": "markdown",
    "id": "e64ffe90-882c-44b4-8176-137e3d3be42b",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## 3-2. Select necessary columns and aggregate them"
    ]
@@ -3587,8 +3608,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "id": "a67e921e-1874-4838-9f8a-d7780b2044b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlite3\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "5accc849-d3a9-44e2-bcef-8eb3800fb44d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the datasets\n",
+    "df_fields = pd.read_csv('SciSciNet_2023/SciSciNet_Fields.tsv', delimiter='\\t')\n",
+    "df_paper_fields = pd.read_csv('SciSciNet_2023/SciSciNet_PaperFields.tsv', delimiter='\\t')\n",
+    "\n",
+    "# Filter the fields dataset by FieldType == 'Top'\n",
+    "df_top_fields = df_fields[df_fields['Field_Type'] == 'Top']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "ebe950de-8847-4131-aa7e-86703d21b101",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a connxection to the database\n",
+    "conn = sqlite3.connect('final_result.sqlite')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
-   "id": "5607b5dc-bc74-4aa8-83e3-622c4f6db074",
+   "id": "d84f46e6-690f-4c7f-a26c-58db870d784e",
    "metadata": {},
    "outputs": [
     {
@@ -3603,26 +3661,13 @@
     }
    ],
    "source": [
-    "import sqlite3\n",
-    "import pandas as pd\n",
-    "\n",
-    "# Load the datasets\n",
-    "df_fields = pd.read_csv('SciSciNet_2023/SciSciNet_Fields.tsv', delimiter='\\t')\n",
-    "df_paper_fields = pd.read_csv('SciSciNet_2023/SciSciNet_PaperFields.tsv', delimiter='\\t')\n",
-    "\n",
-    "# Filter the fields dataset by FieldType == 'Top'\n",
-    "df_top_fields = df_fields[df_fields['Field_Type'] == 'Top']\n",
-    "\n",
-    "# Create a connxection to the database\n",
-    "conn = sqlite3.connect('final_result.sqlite')\n",
-    "\n",
     "df_paper_fields.to_sql('paper_fields', conn, if_exists='replace', index=False)\n",
     "df_top_fields.to_sql('top_fields', conn, if_exists='replace', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "id": "c04f125f-68ae-4d40-9f6b-cc198f28abeb",
    "metadata": {},
    "outputs": [],
@@ -3632,7 +3677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "id": "8d8b0ec7-6a93-46c0-9723-de02d21f2bc6",
    "metadata": {},
    "outputs": [
@@ -3651,15 +3696,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "id": "c9bed3f9-737b-43db-bd0d-a1481662ef36",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(0, 'index', 'INTEGER', 0, None, 0),\n",
-       " (1, 'PaperID', 'INTEGER', 0, None, 0),\n",
+       "[(0, 'index', 'INT', 0, None, 0),\n",
+       " (1, 'PaperID', 'INT', 0, None, 0),\n",
        " (2, 'DOI', 'TEXT', 0, None, 0),\n",
        " (3, 'DocType', 'TEXT', 0, None, 0),\n",
        " (4, 'Year', 'REAL', 0, None, 0),\n",
@@ -3678,16 +3723,16 @@
        " (17, 'Atyp_Median_Z', 'REAL', 0, None, 0),\n",
        " (18, 'SB_B', 'REAL', 0, None, 0),\n",
        " (19, 'SB_T', 'REAL', 0, None, 0),\n",
-       " (20, 'Patent_Count', 'INTEGER', 0, None, 0),\n",
-       " (21, 'Newsfeed_Count', 'INTEGER', 0, None, 0),\n",
-       " (22, 'Tweet_Count', 'INTEGER', 0, None, 0),\n",
-       " (23, 'NCT_Count', 'INTEGER', 0, None, 0),\n",
-       " (24, 'NIH_Count', 'INTEGER', 0, None, 0),\n",
-       " (25, 'NSF_Count', 'INTEGER', 0, None, 0),\n",
+       " (20, 'Patent_Count', 'INT', 0, None, 0),\n",
+       " (21, 'Newsfeed_Count', 'INT', 0, None, 0),\n",
+       " (22, 'Tweet_Count', 'INT', 0, None, 0),\n",
+       " (23, 'NCT_Count', 'INT', 0, None, 0),\n",
+       " (24, 'NIH_Count', 'INT', 0, None, 0),\n",
+       " (25, 'NSF_Count', 'INT', 0, None, 0),\n",
        " (26, 'WSB_mu', 'REAL', 0, None, 0),\n",
        " (27, 'WSB_sigma', 'REAL', 0, None, 0),\n",
        " (28, 'WSB_Cinf', 'REAL', 0, None, 0),\n",
-       " (29, 'fem', 'INTEGER', 0, None, 0),\n",
+       " (29, 'fem', 'INT', 0, None, 0),\n",
        " (30, 'country', 'TEXT', 0, None, 0),\n",
        " (31, 'sdg_codes', 'TEXT', 0, None, 0),\n",
        " (32, 'fem_ratio', 'REAL', 0, None, 0),\n",
@@ -3707,16 +3752,37 @@
        " (46, 'sdg_14', 'REAL', 0, None, 0),\n",
        " (47, 'sdg_15', 'REAL', 0, None, 0),\n",
        " (48, 'sdg_16', 'REAL', 0, None, 0),\n",
-       " (49, 'sdg_17', 'REAL', 0, None, 0)]"
+       " (49, 'sdg_17', 'REAL', 0, None, 0),\n",
+       " (50, 'FieldID', 'INT', 0, None, 0),\n",
+       " (51, 'Field_Name', 'TEXT', 0, None, 0),\n",
+       " (52, 'FieldID_95457728', 'REAL', 0, 'NULL', 0),\n",
+       " (53, 'FieldID_127313418', 'REAL', 0, 'NULL', 0),\n",
+       " (54, 'FieldID_162324750', 'REAL', 0, 'NULL', 0),\n",
+       " (55, 'FieldID_205649164', 'REAL', 0, 'NULL', 0),\n",
+       " (56, 'FieldID_185592680', 'REAL', 0, 'NULL', 0),\n",
+       " (57, 'FieldID_138885662', 'REAL', 0, 'NULL', 0),\n",
+       " (58, 'FieldID_144024400', 'REAL', 0, 'NULL', 0),\n",
+       " (59, 'FieldID_192562407', 'REAL', 0, 'NULL', 0),\n",
+       " (60, 'FieldID_33923547', 'REAL', 0, 'NULL', 0),\n",
+       " (61, 'FieldID_86803240', 'REAL', 0, 'NULL', 0),\n",
+       " (62, 'FieldID_41008148', 'REAL', 0, 'NULL', 0),\n",
+       " (63, 'FieldID_17744445', 'REAL', 0, 'NULL', 0),\n",
+       " (64, 'FieldID_127413603', 'REAL', 0, 'NULL', 0),\n",
+       " (65, 'FieldID_15744967', 'REAL', 0, 'NULL', 0),\n",
+       " (66, 'FieldID_39432304', 'REAL', 0, 'NULL', 0),\n",
+       " (67, 'FieldID_144133560', 'REAL', 0, 'NULL', 0),\n",
+       " (68, 'FieldID_121332964', 'REAL', 0, 'NULL', 0),\n",
+       " (69, 'FieldID_71924100', 'REAL', 0, 'NULL', 0),\n",
+       " (70, 'FieldID_142362112', 'REAL', 0, 'NULL', 0)]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cur.execute(\"PRAGMA table_info('final_matched')\").fetchall()"
+    "cur.execute(\"PRAGMA table_info('final_matched_with_fields')\").fetchall()"
    ]
   },
   {
@@ -3792,6 +3858,43 @@
    "outputs": [],
    "source": [
     "conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "a8f116b4-79a1-4dbe-b4b6-03f2ac857f24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distinct_field_ids = df_top_fields['FieldID'].tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "a958da1e-972b-4463-88dd-15f7eb44ca80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for field_id in distinct_field_ids:\n",
+    "    column_name = f'FieldID_{field_id}'\n",
+    "    query = f\"ALTER TABle final_matched_with_fields ADD COLUMN '{column_name}' REAL DEFAULT NULL;\"\n",
+    "    conn.execute(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b89055b-21f9-4844-8623-6641b8094ec4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for field_id in distinct_fields_ids:\n",
+    "    column_name = f'FieldID_{field_id}'\n",
+    "    query = f\"\"\"\n",
+    "        UPDATE final_matched_with_fields\n",
+    "        SET '{column_name}' = 1"
    ]
   },
   {
