--- a/match.ipynb
+++ b/match.ipynb
@@ -18,9 +18,6 @@
    "execution_count": 49,
    "id": "732dec10-fbe8-49db-916b-a75609705d48",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -33,9 +30,6 @@
    "cell_type": "markdown",
    "id": "f77a597f-1ae1-44bd-b007-8c902798cf0c",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": [],
     "toc-hr-collapsed": true
    },
@@ -2840,7 +2834,6 @@
    "cell_type": "markdown",
    "id": "e64ffe90-882c-44b4-8176-137e3d3be42b",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2849,14 +2842,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "id": "b6d75ad1-7d35-47a7-8984-1e1ffcf4acb2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jhc0261/anaconda3/lib/python3.9/site-packages/jupyter_slack/jupyter_slack.py:17: UserWarning: Either $SLACK_WEBHOOK_URL must be set (see https://api.slack.com/messaging/webhooks) or both $SLACK_TOKEN and $SLACK_ID must be set (see https://api.slack.com/custom-integrations/legacy-tokens). All notifications will be noops under the current setting.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import jupyter_slack\n",
     "import os\n",
-    "os.environ[\"SLACK_WEBHOOK_URL\"]='https://hooks.slack.com/services/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'"
+    "os.environ[\"SLACK_WEBHOOK_URL\"]=''"
    ]
   },
   {
